Fix for speakers on iphone

--- a/less/layout.less
+++ b/less/layout.less
@@ -209,7 +209,7 @@ h2 {
 			padding:0 20px;
 		}
 		li {
-			.wholecolumn(4);
+			.wholecolumn(6);
 			//max-width: 284px;
 			margin: 0 auto;
 			display: inline-block;
@@ -853,6 +853,14 @@ h2 {
 		}
 	}
 
+	#speakers {
+		#speakers-list {
+			li {
+				.wholecolumn(6);
+			}
+		}
+	}
+
 	#tickets {
 		.wrapper {
 		.wholecolumn(12);
@@ -1131,7 +1139,14 @@ h2 {
 			padding: 0 10px;
 		}
 	}
-
+	
+	#speakers {
+		#speakers-list {
+			li {
+				.wholecolumn(4);
+			}
+		}
+	}
 	#venue {
 		.wrapper {
 		}
